--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "admin-service",
+  "name": "code-admin-service",
   "version": "1.0.0",
-  "description": "",
+  "description": "Admin Service",
   "main": "index.js",
   "scripts": {
-    "start": "npx nodemon src/index.js",
+    "dev": "nodemon src/index.js",
+    "start": "node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -12,6 +13,13 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "http-status-codes": "^2.3.0"
+    "http-status-codes": "^2.3.0",
+    "marked": "^12.0.1",
+    "mongoose": "^8.3.1",
+    "nodemon": "^3.1.0",
+    "sanitize-html": "^2.13.0",
+    "turndown": "^7.1.3",
+    "winston": "^3.13.0",
+    "winston-mongodb": "^5.1.1"
   }
 }
